...
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="login_create_account">Create account</string>
    <string name="login_already_account">Already have account?</string>
    <string name="login_with_email_sign_in">Login</string>
    <string name="error_login_invalid_email">Enter valid email address.</string>
    <string name="login_error_password_did_not_match">Password did not match.</string>
    <string name="login_with_email_create_account">Create account</string>
    <string name="error_login_invalid_password">Enter valid password.</string>
    <string name="register_device_service_notification_message">Registering your device.</string>
    <string name="btn_title_forgot_password">Forgot Password?</string>
    <string name="verify_email_send_screen_title">Check your mail</string>
...
